add best deal in town algorithm
