# Server/Source/server/server-web/src/main/java/ro/hacktm/pricediff/mdl/ProductResponseMdl.java
@@ -1,5 +1,7 @@
 package ro.hacktm.pricediff.mdl;
 
+import java.util.List;
+
 /**
  * TODO document me.
  *
@@ -7,5 +9,31 @@ package ro.hacktm.pricediff.mdl;
  * @since 21.05.2016
  */
 public class ProductResponseMdl {
+    private ProductMdl productMdl;
+    private PriceMdl bestPrice;
+    private List<PriceMdl> otherPrices;
 
+    public ProductMdl getProductMdl() {
+        return productMdl;
+    }
+
+    public void setProductMdl(final ProductMdl productMdl) {
+        this.productMdl = productMdl;
+    }
+
+    public PriceMdl getBestPrice() {
+        return bestPrice;
+    }
+
+    public void setBestPrice(final PriceMdl bestPrice) {
+        this.bestPrice = bestPrice;
+    }
+
+    public List<PriceMdl> getOtherPrices() {
+        return otherPrices;
+    }
+
+    public void setOtherPrices(final List<PriceMdl> otherPrices) {
+        this.otherPrices = otherPrices;
+    }
 }
